Update application.json - tela de alertas

--- a/application.json
+++ b/application.json
@@ -1,21 +1,108 @@
 {
   "pages": [
     {
-      "id": "Page1",
+      "id": "Inicio",
       "isDefault": true
+    },
+    {
+      "id": "Treinamento",
+      "isDefault": false
+    },
+    {
+      "id": "Estoque",
+      "isDefault": false
+    },
+    {
+      "id": "Usuários",
+      "isDefault": false
+    },
+    {
+      "id": "Painel de Informações",
+      "isDefault": false
+    },
+    {
+      "id": "Page1",
+      "isDefault": false
+    },
+    {
+      "id": "Medicamentos",
+      "isDefault": false
+    },
+    {
+      "id": "Doenças",
+      "isDefault": false
+    },
+    {
+      "id": "Condutor",
+      "isDefault": false
+    },
+    {
+      "id": "Unidades",
+      "isDefault": false
+    },
+    {
+      "id": "Prontuários",
+      "isDefault": false
+    },
+    {
+      "id": "Alertas",
+      "isDefault": false
+    },
+    {
+      "id": "Semoventes",
+      "isDefault": false
+    },
+    {
+      "id": "Vermífugos",
+      "isDefault": false
+    },
+    {
+      "id": "Ectoparasiticidas",
+      "isDefault": false
+    },
+    {
+      "id": "Coleiras",
+      "isDefault": false
+    },
+    {
+      "id": "Vacinas",
+      "isDefault": false
     }
   ],
   "viewMode": false,
   "appIsExample": false,
   "unreadCommentThreads": 0,
   "unpublishedApplicationDetail": {
-    "appPositioning": {
-      "type": "FIXED"
+    "navigationSetting": {
+      "showNavbar": true,
+      "orientation": "side",
+      "navStyle": "sidebar",
+      "position": "static",
+      "itemStyle": "text",
+      "colorStyle": "light",
+      "logoAssetId": "",
+      "logoConfiguration": "logoAndApplicationTitle",
+      "showSignIn": true
     }
   },
-  "color": "#F4FFDE",
-  "icon": "line-chart",
-  "unpublishedCustomJSLibs": [],
+  "color": "#EAEDFB",
+  "unpublishedAppLayout": {
+    "type": "DESKTOP"
+  },
+  "publishedAppLayout": {
+    "type": "DESKTOP"
+  },
+  "unpublishedCustomJSLibs": [
+    {
+      "uidString": "jspdf_https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"
+    },
+    {
+      "uidString": "jsonpath_https://cdn.jsdelivr.net/npm/jsonpath@1.1.1/jsonpath.min.js"
+    },
+    {
+      "uidString": "service_http://localhost/appsmith-bac/dist/service.umd.js"
+    }
+  ],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
   "applicationVersion": 2,
