System generated commit, for syncing changes with remote after git pull

--- a/application.json
+++ b/application.json
@@ -86,6 +86,7 @@
     }
   },
   "color": "#EAEDFB",
+  "icon": "line-chart",
   "unpublishedAppLayout": {
     "type": "DESKTOP"
   },
@@ -97,10 +98,10 @@
       "uidString": "jspdf_https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"
     },
     {
-      "uidString": "jsonpath_https://cdn.jsdelivr.net/npm/jsonpath@1.1.1/jsonpath.min.js"
+      "uidString": "service_http://localhost/appsmith-bac/dist/service.umd.js"
     },
     {
-      "uidString": "service_http://localhost/appsmith-bac/dist/service.umd.js"
+      "uidString": "jsonpath_https://cdn.jsdelivr.net/npm/jsonpath@1.1.1/jsonpath.min.js"
     }
   ],
   "publishedCustomJSLibs": [],
